--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -156,6 +156,9 @@
     - name: 'Spraakintenties herkennen met LUIS, C#'
       href: how-to-recognize-intents-from-speech-csharp.md
       displayName: 'recognize intent, intent recognition, language understanding service, luis'
+    - name: 'Spraak inschakelen voor uw bot met de Speech-SDK, C#'
+      href: tutorial-voice-enable-your-bot-speech-sdk.md
+      displayName: 'voice assistant, voice enable a bot, bot speech SDK'
     - name: 'Een Flask-app bouwen om tekst om te zetten en samen te stellen, REST'
       href: ../translator/tutorial-build-flask-app-translation-synthesis.md?toc=%2fazure%2fcognitive-services%2fspeech-service%2ftoc.json&bc=%2fazure%2fcognitive-services%2fspeech-service%2fbreadcrumb%2ftoc.json
 - name: Concepten
