--- a/articles/governance/blueprints/toc.yml
+++ b/articles/governance/blueprints/toc.yml
@@ -27,6 +27,14 @@
     - name: Index
       displayName: 'list, examples'
       href: ./samples/index.md
+    - name: IRS 1075
+      items:
+        - name: Overzicht
+          displayName: 'standards, irs, 1075'
+          href: ./samples/irs-1075/index.md
+        - name: Toewijzing van beheeropties
+          displayName: 'standards, irs, 1075'
+          href: ./samples/irs-1075/control-mapping.md
     - name: ISO 27001
       items:
         - name: Overzicht
