--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -247,11 +247,11 @@
               href: devtest-lab-mandatory-artifacts.md
         - name: Integratie met CI/CD
           items:
-            - name: Labs integreren in uw Azure DevOps CI/CD-pijplijn
-              href: devtest-lab-integrate-ci-cd-vsts.md
-            - name: Omgevingen integreren in uw Azure DevOps CI-/CD-pijplijn
+            - name: Labs integreren in uw CI/CD-pijplijn in Azure Pipelines
+              href: devtest-lab-integrate-ci-cd.md
+            - name: Omgevingen integreren in uw CI/CD-pijplijn in Azure Pipelines
               href: integrate-environments-devops-pipeline.md
-            - name: DevTest Labs gebruiken in Azure DevOps om pijplijnen te bouwen en uit te brengen
+            - name: DevTest Labs in Azure Pipelines gebruiken om pijplijnen te ontwikkelen en uit te brengen
               href: use-devtest-labs-build-release-pipelines.md
         - name: Gebruik van labs rapporteren
           href: report-usage-across-multiple-labs-subscriptions.md
